syntax = "proto3";

option go_package = "github.com/rish9511/fus3-app/fuse_service/fuseservice";

package fuse;

service Fuse {
    rpc ListBuckets(EmptyMessage) returns(Buckets) {}
    rpc CopyFile(FileTransferInput) returns(stream FileTransferOutput) {}
}


message EmptyMessage {}

message Location {
    float latitude = 1;
    float longitude = 2;
}

message Bucket {
    string name = 1;
    string path = 2;
    Location location = 3;
}

message FileTransferInput {
    string sourcePath = 1;
    string destinationPath = 2;
}

message FileTransferOutput {
    int32 bytesTransferred = 1;
}

message Buckets {
    repeated Bucket allBuckets = 1;
}